# Rhythm_kd

./: .gitignore  README.md  RHYTHM_FIX.md  current_file.txt  gradle.properties  my_pr.diff  new.txt  out.txt  output.txt  package_output.txt  placeholder_log.txt  rep.ps1  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: android.yml  release.yml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/fdroid/res/values/: config.xml
app/src/github/res/values/: config.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: autoeq_profiles.json  privacy_policy.html
app/src/main/cpp/: CMakeLists.txt  CircularBuffer.h  NativePlayer.cpp  NativePlayer.h  UsbEndpoint.h  flac_parser.cpp  flac_parser.h  format_validator.cpp  format_validator.h  jni_bridge.cpp  rhythm_audio.cpp  ring_buffer.h  siphon_dsp_pipeline.cpp  siphon_engine.cpp  siphon_resampler.cpp  siphon_software_gain.cpp  siphon_software_gain.h  siphon_usb_driver.cpp  siphon_volume_controller.cpp  wav_parser.cpp  wav_parser.h
app/src/main/cpp/dsp/: ParametricEq.cpp  ParametricEq.h
app/src/main/cpp/usb/: UacDescriptorParser.h  UsbTransfer.h
app/src/main/res/drawable/: album_art_background.xml  ic_favorite_border.xml  ic_favorite_filled.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_notification.xml  ic_pause.xml  ic_play_arrow.xml  ic_skip_next.xml  ic_skip_previous.xml  ic_tile_pause.xml  ic_tile_play.xml  ic_tile_skip_next.xml  rhythm_logo.xml  widget_background.xml  widget_button_background.xml  widget_button_background_primary.xml  widget_preview.xml  widget_preview_glance.xml
app/src/main/res/layout/: widget_music_5x5.xml  widget_music_extra_large.xml  widget_music_extra_small.xml  widget_music_large.xml  widget_music_medium.xml  widget_music_small.xml  widget_music_vertical.xml  widget_music_wide.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-it/: strings.xml
docs/: BUILD_VARIANTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  LICENSE  SECURITY.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: help.html  index.html  privacy.html  script.js  style.css  updates.html
wiki/: API-Documentation.md  Architecture.md  Audio-Formats.md  Build-Instructions.md  Contributing.md  FAQ.md  Features.md  Getting-Started.md  Home.md  Installation-Guide.md  Permissions.md  Technology-Stack.md  Troubleshooting.md  Widgets.md
(+286 files in other folders)
